# ros-panopticon

./: .gitignore  CMakeLists.txt  Makefile  README.md  cam_v4l2_settings.txt  camera_setting.sh  package.xml
config/: boards.yml
config/boards/: boardconfig_122.yml  boardconfig_152.yml  boardconfig_344.yml  center.yml  origin.yml
config/camera_info/: usb_cam0.yaml  usb_cam1.yaml  usb_cam2.yaml  usb_cam3.yaml
docs/: Makefile  arch.rst  conf.py  configuration.rst  index.rst  installing.rst  make.bat  scripts.rst  todo.rst  usage.rst
include/: panopticon_node.hpp  panopticon_poser.hpp  panopticon_transformer.hpp  panopticon_viz.hpp  syncer_node.hpp
launch/: ar_sys_multi.launch  aruco_multi.xml  camera_by_id.launch  panopticon.launch  panopticon.xml  panopticon_bag.xml  robot_localization.xml  usb_cam_by_id.xml  uvc_camera_by_serial.xml
msg/: ImageCollection.msg
scripts/: boardconfig_152.yml  boardconfig_42.yml  boardconfig_591.yml  boardconfig_px_122.yml  boardconfig_px_152.yml  boardconfig_px_344.yml  boardconfig_px_42.yml  boardconfig_px_591.yml  create_bord.sh  record_bag.sh
src/: main.cpp  panopticon_node.cpp  panopticon_poser.cpp  panopticon_transformer.cpp  panopticon_viz.cpp  syncer_node.cpp
